--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
                         <h4>2023</h4>
                       <div class="card">
                         <div class="card-body">
-                          <h5 class="card-title">Large-eddy-simulation of Turbulent Buoyant Flow and Conjugate Heat Transfer in a Cubic Cavity with Fin Ribbed Radiators, <b>Numerical Heat Transfer: Part A (Taylor & Francis)</b> (Scopus). (SJR:Q2) (IF:2.928)</h5>
+                          <h5 class="card-title">1. Large-eddy-simulation of Turbulent Buoyant Flow and Conjugate Heat Transfer in a Cubic Cavity with Fin Ribbed Radiators, <b>Numerical Heat Transfer: Part A (Taylor & Francis)</b> (Scopus). (SJR:Q2) <b>(IF:2.928)</b></h5>
                           <p class="card-text">S, Siddiqa, S. V. Naqvi, M. Azam, A.  M. Aly, <b>M. M. Molla</b> (2023)</p>
                           <a href="https://doi.org/10.1080/10407782.2022.2157351" class="btn btn-primary">Read More</a>
                         </div>
@@ -51,29 +51,66 @@
                     <div class="col-lg-6 mb-5">
                         <div class="card">
                             <div class="card-body">
-                              <h5 class="card-title">Large-eddy-simulation of Turbulent Buoyant Flow and Conjugate Heat Transfer in a Cubic Cavity with Fin Ribbed Radiators, <b>Numerical Heat Transfer: Part A (Taylor & Francis)</b> (Scopus). (SJR:Q2) (IF:2.928)</h5>
-                              <p class="card-text">S, Siddiqa, S. V. Naqvi, M. Azam, A.  M. Aly, <b>M. M. Molla</b> (2023)</p>
+                              <h5 class="card-title">2. Meso-Scale Simulation of Free Convection and Entropy Generation of Non-Newtonian Power-law Nanofluids in a Porous Enclosure, <b>Int. J. Ambient Energy (Taylor & Francis)</b> (Scopus). (SJR:Q2) <b>(IF:2.326)</b></h5>
+                              <p class="card-text">I, Mashnoon, F, Hasan, S. Bhowmick, M Kamrujjaman, <b>M. M. Molla</b> (2023)</p>
+                              <a href="https://doi.org/10.1080/01430750.2022.2160811" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-5">
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">3. FVM-RANS Modeling of Air Pollutants Dispersion and Traffic Emission in Dhaka City on a Suburb Scale, <b>Sustainability</b> (MDPI) (Scopus). (SJR:Q1) <b>(IF:3.889)</b></h5>
+                              <p class="card-text">E, Ali, F, Hasan, S. Siddiqa, M. N. Akhter, <b>M. M. Molla</b> (2023)</p>
+                              <a href="https://doi.org/10.3390/su1010000" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-5">
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">4. LBM-MHD data-driven approach to predict Rayleigh-Bénard convective heat transfer by Levenberg-Marquardt algorithm, <b>Axioms</b> (MDPI) (Scopus). (SJR:Q3) <b>(IF:1.824)</b></h5>
+                              <p class="card-text">T. A., Himika, F, Hasan, A.I. Khan, <b>M. M. Molla</b> (2023)</p>
+                              <a href="https://www.mdpi.com/2075-1680/12/2/199" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-5">
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">5. The interplay of harvesting and growth rate for spatially diversified populations and testing of a decoupled scheme" Mathematical Biosciences and Engineering (American Institute of Mathematical Science) (SJR:Q2) <b>(IF:2.194)</b></h5>
+                              <p class="card-text">M. Kamrujjaman; M. M. I. Yasin Adan, <b>M. M. Molla</b>, M. Mohebujjaman; C. Buenrostro (2023)</p>
+                              <a href="https://doi.org/10.3934/mbe.2023276" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-5">
+                        <h4>2022</h4>
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">6. Meso-Scale Simulation of Free Convection and Entropy Generation of Non-Newtonian Power-law Nanofluids in a Porous Enclosure, <b>Int. J. Ambient Energy (Taylor & Francis)</b> (Scopus). (SJR:Q2) <b>(IF:2.326)</b></h5>
+                              <p class="card-text">I, Mashnoon, F, Hasan, S. Bhowmick, M Kamrujjaman, <b>M. M. Molla</b> (2023)</p>
                               <a href="https://doi.org/10.1080/10407782.2022.2157351" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 mb-5">
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">Article Title</h5>
-                          <p class="card-text">Author Name, Journal Name, Year</p>
-                          <a href="#" class="btn btn-primary">Read More</a>
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">7. Meso-Scale Simulation of Free Convection and Entropy Generation of Non-Newtonian Power-law Nanofluids in a Porous Enclosure, <b>Int. J. Ambient Energy (Taylor & Francis)</b> (Scopus). (SJR:Q2) <b>(IF:2.326)</b></h5>
+                              <p class="card-text">I, Mashnoon, F, Hasan, S. Bhowmick, M Kamrujjaman, <b>M. M. Molla</b> (2023)</p>
+                              <a href="https://doi.org/10.1080/10407782.2022.2157351" class="btn btn-primary">Read More</a>
+                            </div>
                         </div>
-                      </div>
                     </div>
                     <div class="col-lg-6 mb-5">
-                      <div class="card">
-                        <div class="card-body">
-                          <h5 class="card-title">Article Title</h5>
-                          <p class="card-text">Author Name, Journal Name, Year</p>
-                          <a href="#" class="btn btn-primary">Read More</a>
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">8. Meso-Scale Simulation of Free Convection and Entropy Generation of Non-Newtonian Power-law Nanofluids in a Porous Enclosure, <b>Int. J. Ambient Energy (Taylor & Francis)</b> (Scopus). (SJR:Q2) <b>(IF:2.326)</b></h5>
+                              <p class="card-text">I, Mashnoon, F, Hasan, S. Bhowmick, M Kamrujjaman, <b>M. M. Molla</b> (2023)</p>
+                              <a href="https://doi.org/10.1080/10407782.2022.2157351" class="btn btn-primary">Read More</a>
+                            </div>
                         </div>
-                      </div>
                     </div>
                   </div>
                 </div>
