--- a/index.html
+++ b/index.html
@@ -49,14 +49,21 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/fd.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/Picture25.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Second slide label</h5>
                           <p>Some representative placeholder content for the second slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/ex2.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/Picture15.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/Picture24.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Third slide label</h5>
                           <p>Some representative placeholder content for the third slide.</p>
