--- a/people.html
+++ b/people.html
@@ -12,6 +12,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="css/custom.css">
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
@@ -53,31 +54,55 @@
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/mla.png" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Dr. Md. Mamun Molla</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">Postdoctoral Research Associate, Dept. of Mechanical & Manufacturing Engineering
+                                University of Manitoba, Canada
+                                PhD in Mechanical Engineering, thesis in Computational Fluid Dynamics (CFD) University of Glasgow, UK
+                                MPhil in Applied Mathematics, Bangladesh University of Engineering & Technology (BUET)
+                                <br>Phone: +880-2-55668200 Ext: 1519
+                                <br>Email: mamun.molla@northsouth.edu
+                                <br>Office:SAC1035 
+                                <br><a href="http://www.northsouth.edu/faculty-members/seps/mathematics-physics/mla.html" class="btn btn-primary mb-2 mt-2">Webpage</a>
+                                <br><a href="https://scholar.google.com/citations?user=n8j355gAAAAJ&hl=en" class="btn btn-primary">Google Scholar</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- About section two-->
             <section class="py-5">
+                <h3 class="text-center">Current Members</h3>
+                <hr>
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/png.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/png.png" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Dr. Preetom Nag</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">Ph.D., Molecule & Life Non-linear Sciences Laboratory
+                                Research Institute for Electronic Science (RIES)
+                                Hokkaido University, Sapporo, Japan
+                                Phone: +880-2-55668200 Ext: 6219
+                                Email: preetom.nag@northsouth.edu
+                                Office: SAC - 1065A
+                                Former Assistant Professor (Specially appointed) & Research fellow (Post-doctoral)
+                                Research Institute for Electronic Science (RIES)
+                                Hokkaido University, Sapporo, Japan
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- About section three-->
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/afroja-mam.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/afroja-mam.png" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Afroja Parvin</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">MS., McMaster University, Canada
+                                <br>Phone: +880-2-55668200 Ext: 6208
+                                <br>Email: afroja.parvin@northsouth.edu
+                                <br>Office: SAC-1133
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -86,22 +111,59 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/Picture4.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/Picture4.png" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Md. Zahangir Hossain</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">M.Sc  in Computational Fluid Dynamics, Memorial University, Canada
+                                M.S in Mathematics, Jahangirnagar University, Bangladesh
+                                B.Sc in Mathematics, Jahangirnagar University, Bangladesh
+                                Phone: +880-2-55668200 Ext: 6215
+                                Email: zahangir.hossain@northsouth.edu
+                                Office: SAC 103
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- About section five-->
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/Picture5.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/Picture5.png" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Dr. Farhad Hasan</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">La Trobe University, Engineering, Mathematics, and Education, Melbourne, Australia
+                                <br>email: m.hasan@latrobe.edu.au
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- About section Six-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="https://dummyimage.com/270x300/c4c2c4/05050d.png&text=no+photo" alt="No photo" /></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Sadia Siddiqa</h2>
+                            <p class="lead fw-normal text-muted mb-0">
+                                <br>Assistant Professor
+                                <br>Prince Sultan University
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- About section Seven-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/Picture6.png" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Sharaban Thohura, PhD</h2>
+                            <p class="lead fw-normal text-muted mb-0">
+                                Associate Professor, Department of Mathematics, Jagannath Univesity
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -111,50 +173,20 @@
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="fw-bolder">Our team</h2>
-                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
+                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and success</p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
-                        <div class="col mb-5 mb-5 mb-xl-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture6.png" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
-                            </div>
-                        </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture7.png" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5 mb-5 mb-sm-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture8.png" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture9.png" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
-                        <div class="col mb-5 mb-5 mb-xl-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture10.png" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
+                                <h5 class="fw-bolder">Johny Eckart</h5>
                                 <div class="fst-italic text-muted">Founder &amp; CEO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture11.png" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture9.png" alt="..." />
+                                <h5 class="fw-bolder">Any Vasek</h5>
                                 <div class="fst-italic text-muted">CFO</div>
                             </div>
                         </div>
@@ -167,7 +199,7 @@
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture13.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture8.png" alt="..." />
                                 <h5 class="fw-bolder">Malvina Cilla</h5>
                                 <div class="fst-italic text-muted">CTO</div>
                             </div>
@@ -176,28 +208,28 @@
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture14.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture11.png" alt="..." />
                                 <h5 class="fw-bolder">Ibbie Eckart</h5>
                                 <div class="fst-italic text-muted">Founder &amp; CEO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture15.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture10.png" alt="..." />
                                 <h5 class="fw-bolder">Arden Vasek</h5>
                                 <div class="fst-italic text-muted">CFO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture16.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture13.png" alt="..." />
                                 <h5 class="fw-bolder">Toribio Nerthus</h5>
                                 <div class="fst-italic text-muted">Operations Manager</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture17.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture14.png" alt="..." />
                                 <h5 class="fw-bolder">Malvina Cilla</h5>
                                 <div class="fst-italic text-muted">CTO</div>
                             </div>
@@ -206,9 +238,30 @@
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture18.png" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture15.png" alt="..." />
                                 <h5 class="fw-bolder">Ibbie Eckart</h5>
                                 <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                            </div>
+                        </div>
+                        <div class="col mb-5 mb-5 mb-xl-0">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture16.png" alt="..." />
+                                <h5 class="fw-bolder">Arden Vasek</h5>
+                                <div class="fst-italic text-muted">CFO</div>
+                            </div>
+                        </div>
+                        <div class="col mb-5 mb-5 mb-sm-0">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture17.png" alt="..." />
+                                <h5 class="fw-bolder">Toribio Nerthus</h5>
+                                <div class="fst-italic text-muted">Operations Manager</div>
+                            </div>
+                        </div>
+                        <div class="col mb-5">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture18.png" alt="..." />
+                                <h5 class="fw-bolder">Malvina Cilla</h5>
+                                <div class="fst-italic text-muted">CTO</div>
                             </div>
                         </div>
                     </div>
